--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   },
   "dependencies": {
     "bindings": "^1.3.1",
-    "nan": "^2.14.0"
+    "nan": "^2.14.0",
+    "node-addon-api": "^3.1.0"
   },
   "engines": {
     "node": ">=6.0.0"
